parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult
Rule 2     PackageClause -> PACKAGE IDENT
Rule 3     ImportDeclMult -> ImportDecl SEMICOLON ImportDeclMult
Rule 4     ImportDeclMult -> <empty>
Rule 5     ImportDecl -> IMPORT ImportSpec
Rule 6     ImportDecl -> IMPORT LPAREN ImportSpecMult RPAREN
Rule 7     ImportSpecMult -> ImportSpec SEMICOLON ImportSpecMult
Rule 8     ImportSpecMult -> <empty>
Rule 9     ImportSpec -> PERIOD ImportPath
Rule 10    ImportSpec -> IDENT ImportPath
Rule 11    ImportSpec -> ImportPath
Rule 12    ImportPath -> STRING
Rule 13    TopLevelDeclMult -> TopLevelDecl SEMICOLON TopLevelDeclMult
Rule 14    TopLevelDeclMult -> <empty>
Rule 15    TopLevelDecl -> Decl
Rule 16    TopLevelDecl -> FuncDecl
Rule 17    Decl -> ConstDecl
Rule 18    Decl -> VarDecl
Rule 19    Decl -> TypeDecl
Rule 20    ConstDecl -> CONST ConstSpec
Rule 21    ConstDecl -> CONST LPAREN ConstSpecMult RPAREN
Rule 22    ConstSpecMult -> ConstSpec SEMICOLON ConstSpecMult
Rule 23    ConstSpecMult -> ConstSpec
Rule 24    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 25    ConstSpec -> IdentifierList IDENT ASSIGN ExpressionList
Rule 26    VarDecl -> VAR VarSpec
Rule 27    VarDecl -> VAR LPAREN VarMult RPAREN
Rule 28    VarMult -> VarSpec SEMICOLON VarMult
Rule 29    VarMult -> VarSpec
Rule 30    VarSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 31    VarSpec -> IdentifierList IDENT ASSIGN ExpressionList
Rule 32    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 33    VarSpec -> IdentifierList Type
Rule 34    VarSpec -> IdentifierList IDENT
Rule 35    TypeDecl -> TYPE TypeSpec
Rule 36    TypeDecl -> TYPE LPAREN TypeSpecMult RPAREN
Rule 37    TypeSpecMult -> TypeSpec SEMICOLON TypeSpecMult
Rule 38    TypeSpecMult -> <empty>
Rule 39    TypeSpec -> AliasDecl
Rule 40    TypeSpec -> Typedef
Rule 41    AliasDecl -> IDENT ASSIGN Type
Rule 42    AliasDecl -> IDENT ASSIGN IDENT
Rule 43    Typedef -> IDENT Type
Rule 44    Typedef -> IDENT IDENT
Rule 45    IdentifierList -> IDENT
Rule 46    IdentifierList -> IDENT COMMA IdentifierList
Rule 47    ExpressionList -> Expr
Rule 48    ExpressionList -> ExpressionList COMMA Expr
Rule 49    Expr -> UnaryExpr
Rule 50    Expr -> Expr LOR Expr
Rule 51    Expr -> Expr LAND Expr
Rule 52    Expr -> Expr EQL Expr
Rule 53    Expr -> Expr NEQ Expr
Rule 54    Expr -> Expr LSS Expr
Rule 55    Expr -> Expr LEQ Expr
Rule 56    Expr -> Expr GTR Expr
Rule 57    Expr -> Expr GEQ Expr
Rule 58    Expr -> Expr ADD Expr
Rule 59    Expr -> Expr SUB Expr
Rule 60    Expr -> Expr OR Expr
Rule 61    Expr -> Expr XOR Expr
Rule 62    Expr -> Expr MUL Expr
Rule 63    Expr -> Expr QUO Expr
Rule 64    Expr -> Expr REM Expr
Rule 65    Expr -> Expr SHL Expr
Rule 66    Expr -> Expr SHR Expr
Rule 67    Expr -> Expr AND Expr
Rule 68    Expr -> Expr AND_NOT Expr
Rule 69    UnaryExpr -> PrimaryExpr
Rule 70    UnaryExpr -> ADD UnaryExpr
Rule 71    UnaryExpr -> SUB UnaryExpr
Rule 72    UnaryExpr -> NOT UnaryExpr
Rule 73    UnaryExpr -> XOR UnaryExpr
Rule 74    UnaryExpr -> MUL UnaryExpr
Rule 75    UnaryExpr -> AND UnaryExpr
Rule 76    PrimaryExpr -> Lit
Rule 77    PrimaryExpr -> IDENT
Rule 78    PrimaryExpr -> LPAREN Expr RPAREN
Rule 79    PrimaryExpr -> PrimaryExpr Selector
Rule 80    PrimaryExpr -> PrimaryExpr Index
Rule 81    PrimaryExpr -> PrimaryExpr Slice
Rule 82    PrimaryExpr -> PrimaryExpr Arguments
Rule 83    Selector -> PERIOD IDENT
Rule 84    Index -> LBRACK Expr RBRACK
Rule 85    Slice -> LBRACK Expr COLON Expr RBRACK
Rule 86    Slice -> LBRACK COLON Expr RBRACK
Rule 87    Slice -> LBRACK Expr COLON RBRACK
Rule 88    Slice -> LBRACK COLON RBRACK
Rule 89    Slice -> LBRACK COLON Expr COLON Expr RBRACK
Rule 90    Slice -> LBRACK Expr COLON Expr COLON Expr RBRACK
Rule 91    Arguments -> LPAREN RPAREN
Rule 92    Arguments -> LPAREN ExpressionList RPAREN
Rule 93    Arguments -> LPAREN ExpressionList COMMA RPAREN
Rule 94    Arguments -> LPAREN TypeT RPAREN
Rule 95    Arguments -> LPAREN TypeT COMMA RPAREN
Rule 96    Arguments -> LPAREN TypeT COMMA ExpressionList RPAREN
Rule 97    Arguments -> LPAREN TypeT COMMA ExpressionList COMMA RPAREN
Rule 98    Arguments -> LPAREN IDENT RPAREN
Rule 99    Arguments -> LPAREN IDENT COMMA RPAREN
Rule 100   Arguments -> LPAREN IDENT COMMA ExpressionList RPAREN
Rule 101   Arguments -> LPAREN IDENT COMMA ExpressionList COMMA RPAREN
Rule 102   Type -> TypeT
Rule 103   Type -> PointerType
Rule 104   Type -> LPAREN PointerType RPAREN
Rule 105   TypeT -> ArrayType
Rule 106   TypeT -> StructType
Rule 107   TypeT -> SliceType
Rule 108   TypeT -> MapType
Rule 109   TypeT -> FunctionType
Rule 110   TypeT -> LPAREN TypeT RPAREN
Rule 111   TypeT -> LPAREN IDENT RPAREN
Rule 112   PointerType -> MUL Type
Rule 113   PointerType -> MUL IDENT
Rule 114   SliceType -> LBRACK RBRACK ElementType
Rule 115   ArrayType -> LBRACK ArrayLength RBRACK ElementType
Rule 116   ArrayLength -> Expr
Rule 117   ElementType -> Type
Rule 118   ElementType -> IDENT
Rule 119   StructType -> STRUCT BeginStruct LBRACE FieldDeclMult RBRACE EndStruct
Rule 120   BeginStruct -> <empty>
Rule 121   EndStruct -> <empty>
Rule 122   FieldDeclMult -> FieldDeclMult FieldDecl SEMICOLON
Rule 123   FieldDeclMult -> <empty>
Rule 124   FieldDecl -> IdentifierList Type
Rule 125   FieldDecl -> IdentifierList IDENT
Rule 126   FieldDecl -> EmbeddedField
Rule 127   FieldDecl -> IdentifierList Type Tag
Rule 128   FieldDecl -> IdentifierList IDENT Tag
Rule 129   FieldDecl -> EmbeddedField Tag
Rule 130   Tag -> STRING
Rule 131   EmbeddedField -> MUL IDENT
Rule 132   EmbeddedField -> IDENT
Rule 133   MapType -> MAP LBRACK KeyType RBRACK ElementType
Rule 134   KeyType -> Type
Rule 135   KeyType -> IDENT
Rule 136   FunctionType -> FUNC Signature
Rule 137   Lit -> BasicLit
Rule 138   Lit -> CompositeLit
Rule 139   Lit -> FunctionLit
Rule 140   BasicLit -> IntLit
Rule 141   BasicLit -> FloatLit
Rule 142   BasicLit -> ImagLit
Rule 143   BasicLit -> RuneLit
Rule 144   BasicLit -> StringLit
Rule 145   BasicLit -> BoolLit
Rule 146   IntLit -> INT
Rule 147   FloatLit -> FLOAT
Rule 148   ImagLit -> IMAG
Rule 149   RuneLit -> RUNE
Rule 150   StringLit -> STRING
Rule 151   BoolLit -> BOOL
Rule 152   CompositeLit -> StructType Arguments
Rule 153   CompositeLit -> ArrayType LiteralValue
Rule 154   CompositeLit -> SliceType LiteralValue
Rule 155   CompositeLit -> MapType LiteralValue
Rule 156   CompositeLit -> IDENT LiteralValue
Rule 157   LiteralValue -> LBRACE ElementList COMMA RBRACE
Rule 158   LiteralValue -> LBRACE ElementList RBRACE
Rule 159   LiteralValue -> LBRACE RBRACE
Rule 160   ElementList -> KeyedElement
Rule 161   ElementList -> ElementList COMMA KeyedElement
Rule 162   KeyedElement -> Element
Rule 163   KeyedElement -> Key COLON Element
Rule 164   Key -> Expr
Rule 165   Key -> LiteralValue
Rule 166   Element -> Expr
Rule 167   Element -> LiteralValue
Rule 168   FunctionLit -> FUNC Signature FunctionBody
Rule 169   FuncDecl -> FUNC FunctionName Signature FunctionBody
Rule 170   FuncDecl -> FUNC FunctionName Signature
Rule 171   FunctionName -> IDENT
Rule 172   FunctionBody -> Block
Rule 173   Signature -> Parameters Result
Rule 174   Signature -> Parameters
Rule 175   Parameters -> LPAREN RPAREN
Rule 176   Parameters -> LPAREN ParameterList RPAREN
Rule 177   Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 178   ParameterList -> ParameterDecl
Rule 179   ParameterList -> ParameterList COMMA IDENT
Rule 180   ParameterList -> ParameterList COMMA Type
Rule 181   ParameterList -> ParameterList COMMA ParameterDecl
Rule 182   ParameterDecl -> IdentifierList Type
Rule 183   ParameterDecl -> IdentifierList IDENT
Rule 184   Result -> Parameters
Rule 185   Result -> Type
Rule 186   Result -> IDENT
Rule 187   StatementList -> Statement SEMICOLON StatementList
Rule 188   StatementList -> <empty>
Rule 189   Statement -> Decl
Rule 190   Statement -> LabeledStmt
Rule 191   Statement -> SimpleStmt
Rule 192   Statement -> GotoStmt
Rule 193   Statement -> ReturnStmt
Rule 194   Statement -> BreakStmt
Rule 195   Statement -> ContinueStmt
Rule 196   Statement -> FallthroughStmt
Rule 197   Statement -> Block
Rule 198   Statement -> IfStmt
Rule 199   Statement -> SwitchStmt
Rule 200   Statement -> ForStmt
Rule 201   LabeledStmt -> Label COLON Statement
Rule 202   Label -> IDENT
Rule 203   SimpleStmt -> EmptyStmt
Rule 204   SimpleStmt -> ExpressionStmt
Rule 205   SimpleStmt -> IncDecStmt
Rule 206   SimpleStmt -> Assignment
Rule 207   SimpleStmt -> ShortVarDecl
Rule 208   EmptyStmt -> <empty>
Rule 209   ExpressionStmt -> Expr
Rule 210   IncDecStmt -> Expr INC
Rule 211   IncDecStmt -> Expr DEC
Rule 212   Assignment -> ExpressionList assign_op ExpressionList
Rule 213   assign_op -> add_op_assign
Rule 214   assign_op -> mul_op_assign
Rule 215   assign_op -> ASSIGN
Rule 216   add_op_assign -> ADD_ASSIGN
Rule 217   add_op_assign -> SUB_ASSIGN
Rule 218   add_op_assign -> OR_ASSIGN
Rule 219   add_op_assign -> XOR_ASSIGN
Rule 220   mul_op_assign -> MUL_ASSIGN
Rule 221   mul_op_assign -> QUO_ASSIGN
Rule 222   mul_op_assign -> REM_ASSIGN
Rule 223   mul_op_assign -> AND_ASSIGN
Rule 224   mul_op_assign -> SHL_ASSIGN
Rule 225   mul_op_assign -> SHR_ASSIGN
Rule 226   mul_op_assign -> AND_NOT_ASSIGN
Rule 227   ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 228   GotoStmt -> GOTO Label
Rule 229   ReturnStmt -> RETURN ExpressionList
Rule 230   ReturnStmt -> RETURN
Rule 231   BreakStmt -> BREAK Label
Rule 232   BreakStmt -> BREAK
Rule 233   ContinueStmt -> CONTINUE Label
Rule 234   ContinueStmt -> CONTINUE
Rule 235   FallthroughStmt -> FALLTHROUGH
Rule 236   Block -> LBRACE StatementList RBRACE
Rule 237   IfStmt -> IF Expr Block else_stmt
Rule 238   IfStmt -> IF SimpleStmt SEMICOLON Expr Block else_stmt
Rule 239   else_stmt -> ELSE IfStmt
Rule 240   else_stmt -> ELSE Block
Rule 241   else_stmt -> <empty>
Rule 242   SwitchStmt -> ExprSwitchStmt
Rule 243   SwitchStmt -> TypeSwitchStmt
Rule 244   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expr LBRACE BeginSwitch ExprCaseClauseMult EndSwitch RBRACE
Rule 245   ExprSwitchStmt -> SWITCH Expr LBRACE BeginSwitch ExprCaseClauseMult EndSwitch RBRACE
Rule 246   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON LBRACE BeginSwitch ExprCaseClauseMult EndSwitch RBRACE
Rule 247   ExprSwitchStmt -> SWITCH LBRACE BeginSwitch ExprCaseClauseMult EndSwitch RBRACE
Rule 248   BeginSwitch -> <empty>
Rule 249   EndSwitch -> <empty>
Rule 250   ExprCaseClauseMult -> ExprCaseClause ExprCaseClauseMult
Rule 251   ExprCaseClauseMult -> <empty>
Rule 252   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 253   ExprSwitchCase -> CASE ExpressionList
Rule 254   ExprSwitchCase -> DEFAULT
Rule 255   TypeSwitchStmt -> SWITCH SimpleStmt SEMICOLON TypeSwitchGuard LBRACE TypeCaseClauseMult RBRACE
Rule 256   TypeSwitchStmt -> SWITCH TypeSwitchGuard LBRACE TypeCaseClauseMult RBRACE
Rule 257   TypeSwitchGuard -> IDENT DEFINE PrimaryExpr PERIOD LPAREN TYPE RPAREN
Rule 258   TypeSwitchGuard -> PrimaryExpr PERIOD LPAREN TYPE RPAREN
Rule 259   TypeCaseClauseMult -> TypeCaseClause TypeCaseClauseMult
Rule 260   TypeCaseClauseMult -> <empty>
Rule 261   TypeCaseClause -> CASE TypeList COLON StatementList
Rule 262   TypeCaseClause -> DEFAULT COLON StatementList
Rule 263   TypeList -> Type
Rule 264   TypeList -> IDENT
Rule 265   TypeList -> Type COMMA TypeList
Rule 266   TypeList -> IDENT COMMA TypeList
Rule 267   ForStmt -> FOR BeginFor Condition Block EndFor
Rule 268   ForStmt -> FOR BeginFor ForClause Block EndFor
Rule 269   ForStmt -> FOR BeginFor RangeClause Block EndFor
Rule 270   ForStmt -> FOR BeginFor Block EndFor
Rule 271   BeginFor -> <empty>
Rule 272   EndFor -> <empty>
Rule 273   Condition -> Expr
Rule 274   ForClause -> InitStmt SEMICOLON Condition SEMICOLON PostStmt
Rule 275   ForClause -> InitStmt SEMICOLON SEMICOLON PostStmt
Rule 276   InitStmt -> SimpleStmt
Rule 277   PostStmt -> SimpleStmt
Rule 278   RangeClause -> RangeList RANGE Expr
Rule 279   RangeList -> ExpressionList ASSIGN
Rule 280   RangeList -> IdentifierList DEFINE
Rule 281   RangeList -> <empty>

Terminals, with rules where they appear

ADD                  : 58 70
ADD_ASSIGN           : 216
AND                  : 67 75
AND_ASSIGN           : 223
AND_NOT              : 68
AND_NOT_ASSIGN       : 226
ASSIGN               : 24 25 30 31 32 41 42 215 279
BOOL                 : 151
BREAK                : 231 232
CASE                 : 253 261
COLON                : 85 86 87 88 89 89 90 90 163 201 252 261 262
COMMA                : 46 48 93 95 96 97 97 99 100 101 101 157 161 177 179 180 181 265 266
CONST                : 20 21
CONTINUE             : 233 234
DEC                  : 211
DEFAULT              : 254 262
DEFINE               : 227 257 280
ELSE                 : 239 240
EQL                  : 52
FALLTHROUGH          : 235
FLOAT                : 147
FOR                  : 267 268 269 270
FUNC                 : 136 168 169 170
GEQ                  : 57
GOTO                 : 228
GTR                  : 56
IDENT                : 2 10 25 31 34 41 42 42 43 44 44 45 46 77 83 98 99 100 101 111 113 118 125 128 131 132 135 156 171 179 183 186 202 257 264 266
IF                   : 237 238
IMAG                 : 148
IMPORT               : 5 6
INC                  : 210
INT                  : 146
LAND                 : 51
LBRACE               : 119 157 158 159 236 244 245 246 247 255 256
LBRACK               : 84 85 86 87 88 89 90 114 115 133
LEQ                  : 55
LOR                  : 50
LPAREN               : 6 21 27 36 78 91 92 93 94 95 96 97 98 99 100 101 104 110 111 175 176 177 257 258
LSS                  : 54
MAP                  : 133
MUL                  : 62 74 112 113 131
MUL_ASSIGN           : 220
NEQ                  : 53
NOT                  : 72
OR                   : 60
OR_ASSIGN            : 218
PACKAGE              : 2
PERIOD               : 9 83 257 258
QUO                  : 63
QUO_ASSIGN           : 221
RANGE                : 278
RBRACE               : 119 157 158 159 236 244 245 246 247 255 256
RBRACK               : 84 85 86 87 88 89 90 114 115 133
REM                  : 64
REM_ASSIGN           : 222
RETURN               : 229 230
RPAREN               : 6 21 27 36 78 91 92 93 94 95 96 97 98 99 100 101 104 110 111 175 176 177 257 258
RUNE                 : 149
SEMICOLON            : 1 3 7 13 22 28 37 122 187 238 244 246 255 274 274 275 275
SHL                  : 65
SHL_ASSIGN           : 224
SHR                  : 66
SHR_ASSIGN           : 225
STRING               : 12 130 150
STRUCT               : 119
SUB                  : 59 71
SUB_ASSIGN           : 217
SWITCH               : 244 245 246 247 255 256
TYPE                 : 35 36 257 258
VAR                  : 26 27
XOR                  : 61 73
XOR_ASSIGN           : 219
error                : 

Nonterminals, with rules where they appear

AliasDecl            : 39
Arguments            : 82 152
ArrayLength          : 115
ArrayType            : 105 153
Assignment           : 206
BasicLit             : 137
BeginFor             : 267 268 269 270
BeginStruct          : 119
BeginSwitch          : 244 245 246 247
Block                : 172 197 237 238 240 267 268 269 270
BoolLit              : 145
BreakStmt            : 194
CompositeLit         : 138
Condition            : 267 274
ConstDecl            : 17
ConstSpec            : 20 22 23
ConstSpecMult        : 21 22
ContinueStmt         : 195
Decl                 : 15 189
Element              : 162 163
ElementList          : 157 158 161
ElementType          : 114 115 133
EmbeddedField        : 126 129
EmptyStmt            : 203
EndFor               : 267 268 269 270
EndStruct            : 119
EndSwitch            : 244 245 246 247
Expr                 : 47 48 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 78 84 85 85 86 87 89 89 90 90 90 116 164 166 209 210 211 237 238 244 245 273 278
ExprCaseClause       : 250
ExprCaseClauseMult   : 244 245 246 247 250
ExprSwitchCase       : 252
ExprSwitchStmt       : 242
ExpressionList       : 24 25 30 31 32 48 92 93 96 97 100 101 212 212 227 229 253 279
ExpressionStmt       : 204
FallthroughStmt      : 196
FieldDecl            : 122
FieldDeclMult        : 119 122
FloatLit             : 141
ForClause            : 268
ForStmt              : 200
FuncDecl             : 16
FunctionBody         : 168 169
FunctionLit          : 139
FunctionName         : 169 170
FunctionType         : 109
GotoStmt             : 192
IdentifierList       : 24 25 30 31 32 33 34 46 124 125 127 128 182 183 227 280
IfStmt               : 198 239
ImagLit              : 142
ImportDecl           : 3
ImportDeclMult       : 1 3
ImportPath           : 9 10 11
ImportSpec           : 5 7
ImportSpecMult       : 6 7
IncDecStmt           : 205
Index                : 80
InitStmt             : 274 275
IntLit               : 140
Key                  : 163
KeyType              : 133
KeyedElement         : 160 161
Label                : 201 228 231 233
LabeledStmt          : 190
Lit                  : 76
LiteralValue         : 153 154 155 156 165 167
MapType              : 108 155
PackageClause        : 1
ParameterDecl        : 178 181
ParameterList        : 176 177 179 180 181
Parameters           : 173 174 184
PointerType          : 103 104
PostStmt             : 274 275
PrimaryExpr          : 69 79 80 81 82 257 258
RangeClause          : 269
RangeList            : 278
Result               : 173
ReturnStmt           : 193
RuneLit              : 143
Selector             : 79
ShortVarDecl         : 207
Signature            : 136 168 169 170
SimpleStmt           : 191 238 244 246 255 276 277
Slice                : 81
SliceType            : 107 154
SourceFile           : 0
Statement            : 187 201
StatementList        : 187 236 252 261 262
StringLit            : 144
StructType           : 106 152
SwitchStmt           : 199
Tag                  : 127 128 129
TopLevelDecl         : 13
TopLevelDeclMult     : 1 13
Type                 : 24 30 33 41 43 112 117 124 127 134 180 182 185 263 265
TypeCaseClause       : 259
TypeCaseClauseMult   : 255 256 259
TypeDecl             : 19
TypeList             : 261 265 266
TypeSpec             : 35 37
TypeSpecMult         : 36 37
TypeSwitchGuard      : 255 256
TypeSwitchStmt       : 243
TypeT                : 94 95 96 97 102 110
Typedef              : 40
UnaryExpr            : 49 70 71 72 73 74 75
VarDecl              : 18
VarMult              : 27 28
VarSpec              : 26 28 29
add_op_assign        : 213
assign_op            : 212
else_stmt            : 237 238
mul_op_assign        : 214


state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult
    (2) PackageClause -> . PACKAGE IDENT

    PACKAGE         shift and go to state 3

    SourceFile                     shift and go to state 1
    PackageClause                  shift and go to state 2

state 1

    (0) S' -> SourceFile .



state 2

    (1) SourceFile -> PackageClause . SEMICOLON ImportDeclMult TopLevelDeclMult

    SEMICOLON       shift and go to state 4


state 3

    (2) PackageClause -> PACKAGE . IDENT

    IDENT           shift and go to state 5


state 4

    (1) SourceFile -> PackageClause SEMICOLON . ImportDeclMult TopLevelDeclMult
    (3) ImportDeclMult -> . ImportDecl SEMICOLON ImportDeclMult
    (4) ImportDeclMult -> .
    (5) ImportDecl -> . IMPORT ImportSpec
    (6) ImportDecl -> . IMPORT LPAREN ImportSpecMult RPAREN

    FUNC            reduce using rule 4 (ImportDeclMult -> .)
    CONST           reduce using rule 4 (ImportDeclMult -> .)
    VAR             reduce using rule 4 (ImportDeclMult -> .)
    TYPE            reduce using rule 4 (ImportDeclMult -> .)
    $end            reduce using rule 4 (ImportDeclMult -> .)
    IMPORT          shift and go to state 8

    ImportDeclMult                 shift and go to state 6
    ImportDecl                     shift and go to state 7

state 5

    (2) PackageClause -> PACKAGE IDENT .

    SEMICOLON       reduce using rule 2 (PackageClause -> PACKAGE IDENT .)


state 6

    (1) SourceFile -> PackageClause SEMICOLON ImportDeclMult . TopLevelDeclMult
    (13) TopLevelDeclMult -> . TopLevelDecl SEMICOLON TopLevelDeclMult
    (14) TopLevelDeclMult -> .
    (15) TopLevelDecl -> . Decl
    (16) TopLevelDecl -> . FuncDecl
    (17) Decl -> . ConstDecl
    (18) Decl -> . VarDecl
    (19) Decl -> . TypeDecl
    (169) FuncDecl -> . FUNC FunctionName Signature FunctionBody
    (170) FuncDecl -> . FUNC FunctionName Signature
    (20) ConstDecl -> . CONST ConstSpec
    (21) ConstDecl -> . CONST LPAREN ConstSpecMult RPAREN
    (26) VarDecl -> . VAR VarSpec
    (27) VarDecl -> . VAR LPAREN VarMult RPAREN
    (35) TypeDecl -> . TYPE TypeSpec
    (36) TypeDecl -> . TYPE LPAREN TypeSpecMult RPAREN

    $end            reduce using rule 14 (TopLevelDeclMult -> .)
    FUNC            shift and go to state 16
    CONST           shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19

    TopLevelDeclMult               shift and go to state 9
    TopLevelDecl                   shift and go to state 10
    Decl                           shift and go to state 11
    FuncDecl                       shift and go to state 12
    ConstDecl                      shift and go to state 13
    VarDecl                        shift and go to state 14
    TypeDecl                       shift and go to state 15

state 7

    (3) ImportDeclMult -> ImportDecl . SEMICOLON ImportDeclMult

    SEMICOLON       shift and go to state 20


state 8

    (5) ImportDecl -> IMPORT . ImportSpec
    (6) ImportDecl -> IMPORT . LPAREN ImportSpecMult RPAREN
    (9) ImportSpec -> . PERIOD ImportPath
    (10) ImportSpec -> . IDENT ImportPath
    (11) ImportSpec -> . ImportPath
    (12) ImportPath -> . STRING

    LPAREN          shift and go to state 22
    PERIOD          shift and go to state 23
    IDENT           shift and go to state 25
    STRING          shift and go to state 26

    ImportSpec                     shift and go to state 21
    ImportPath                     shift and go to state 24

state 9

    (1) SourceFile -> PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult .

    $end            reduce using rule 1 (SourceFile -> PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult .)


state 10

    (13) TopLevelDeclMult -> TopLevelDecl . SEMICOLON TopLevelDeclMult

    SEMICOLON       shift and go to state 27


state 11

    (15) TopLevelDecl -> Decl .

    SEMICOLON       reduce using rule 15 (TopLevelDecl -> Decl .)


state 12

    (16) TopLevelDecl -> FuncDecl .

    SEMICOLON       reduce using rule 16 (TopLevelDecl -> FuncDecl .)


state 13

    (17) Decl -> ConstDecl .

    SEMICOLON       reduce using rule 17 (Decl -> ConstDecl .)


state 14

    (18) Decl -> VarDecl .

    SEMICOLON       reduce using rule 18 (Decl -> VarDecl .)


state 15

    (19) Decl -> TypeDecl .

    SEMICOLON       reduce using rule 19 (Decl -> TypeDecl .)


state 16

    (169) FuncDecl -> FUNC . FunctionName Signature FunctionBody
    (170) FuncDecl -> FUNC . FunctionName Signature
    (171) FunctionName -> . IDENT

    IDENT           shift and go to state 29

    FunctionName                   shift and go to state 28

state 17

    (20) ConstDecl -> CONST . ConstSpec
    (21) ConstDecl -> CONST . LPAREN ConstSpecMult RPAREN
    (24) ConstSpec -> . IdentifierList Type ASSIGN ExpressionList
    (25) ConstSpec -> . IdentifierList IDENT ASSIGN ExpressionList
    (45) IdentifierList -> . IDENT
    (46) IdentifierList -> . IDENT COMMA IdentifierList

    LPAREN          shift and go to state 31
    IDENT           shift and go to state 33

    ConstSpec                      shift and go to state 30
    IdentifierList                 shift and go to state 32

state 18

    (26) VarDecl -> VAR . VarSpec
    (27) VarDecl -> VAR . LPAREN VarMult RPAREN
    (30) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (31) VarSpec -> . IdentifierList IDENT ASSIGN ExpressionList
    (32) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (33) VarSpec -> . IdentifierList Type
    (34) VarSpec -> . IdentifierList IDENT
    (45) IdentifierList -> . IDENT
    (46) IdentifierList -> . IDENT COMMA IdentifierList

    LPAREN          shift and go to state 35
    IDENT           shift and go to state 33

    VarSpec                        shift and go to state 34
    IdentifierList                 shift and go to state 36

state 19

    (35) TypeDecl -> TYPE . TypeSpec
    (36) TypeDecl -> TYPE . LPAREN TypeSpecMult RPAREN
    (39) TypeSpec -> . AliasDecl
    (40) TypeSpec -> . Typedef
    (41) AliasDecl -> . IDENT ASSIGN Type
    (42) AliasDecl -> . IDENT ASSIGN IDENT
    (43) Typedef -> . IDENT Type
    (44) Typedef -> . IDENT IDENT

    LPAREN          shift and go to state 38
    IDENT           shift and go to state 41

    TypeSpec                       shift and go to state 37
    AliasDecl                      shift and go to state 39
    Typedef                        shift and go to state 40

state 20

    (3) ImportDeclMult -> ImportDecl SEMICOLON . ImportDeclMult
    (3) ImportDeclMult -> . ImportDecl SEMICOLON ImportDeclMult
    (4) ImportDeclMult -> .
    (5) ImportDecl -> . IMPORT ImportSpec
    (6) ImportDecl -> . IMPORT LPAREN ImportSpecMult RPAREN

    FUNC            reduce using rule 4 (ImportDeclMult -> .)
    CONST           reduce using rule 4 (ImportDeclMult -> .)
    VAR             reduce using rule 4 (ImportDeclMult -> .)
    TYPE            reduce using rule 4 (ImportDeclMult -> .)
    $end            reduce using rule 4 (ImportDeclMult -> .)
    IMPORT          shift and go to state 8

    ImportDecl                     shift and go to state 7
    ImportDeclMult                 shift and go to state 42

state 21

    (5) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 5 (ImportDecl -> IMPORT ImportSpec .)


state 22

    (6) ImportDecl -> IMPORT LPAREN . ImportSpecMult RPAREN
    (7) ImportSpecMult -> . ImportSpec SEMICOLON ImportSpecMult
    (8) ImportSpecMult -> .
    (9) ImportSpec -> . PERIOD ImportPath
    (10) ImportSpec -> . IDENT ImportPath
    (11) ImportSpec -> . ImportPath
    (12) ImportPath -> . STRING

    RPAREN          reduce using rule 8 (ImportSpecMult -> .)
    PERIOD          shift and go to state 23
    IDENT           shift and go to state 25
    STRING          shift and go to state 26

    ImportSpecMult                 shift and go to state 43
    ImportSpec                     shift and go to state 44
    ImportPath                     shift and go to state 24

state 23

    (9) ImportSpec -> PERIOD . ImportPath
    (12) ImportPath -> . STRING

    STRING          shift and go to state 26

    ImportPath                     shift and go to state 45

state 24

    (11) ImportSpec -> ImportPath .

    SEMICOLON       reduce using rule 11 (ImportSpec -> ImportPath .)


state 25

    (10) ImportSpec -> IDENT . ImportPath
    (12) ImportPath -> . STRING

    STRING          shift and go to state 26

    ImportPath                     shift and go to state 46

state 26

    (12) ImportPath -> STRING .

    SEMICOLON       reduce using rule 12 (ImportPath -> STRING .)


state 27

    (13) TopLevelDeclMult -> TopLevelDecl SEMICOLON . TopLevelDeclMult
    (13) TopLevelDeclMult -> . TopLevelDecl SEMICOLON TopLevelDeclMult
    (14) TopLevelDeclMult -> .
    (15) TopLevelDecl -> . Decl
    (16) TopLevelDecl -> . FuncDecl
    (17) Decl -> . ConstDecl
    (18) Decl -> . VarDecl
    (19) Decl -> . TypeDecl
    (169) FuncDecl -> . FUNC FunctionName Signature FunctionBody
    (170) FuncDecl -> . FUNC FunctionName Signature
    (20) ConstDecl -> . CONST ConstSpec
    (21) ConstDecl -> . CONST LPAREN ConstSpecMult RPAREN
    (26) VarDecl -> . VAR VarSpec
    (27) VarDecl -> . VAR LPAREN VarMult RPAREN
    (35) TypeDecl -> . TYPE TypeSpec
    (36) TypeDecl -> . TYPE LPAREN TypeSpecMult RPAREN

    $end            reduce using rule 14 (TopLevelDeclMult -> .)
    FUNC            shift and go to state 16
    CONST           shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19

    TopLevelDecl                   shift and go to state 10
    TopLevelDeclMult               shift and go to state 47
    Decl                           shift and go to state 11
    FuncDecl                       shift and go to state 12
    ConstDecl                      shift and go to state 13
    VarDecl                        shift and go to state 14
    TypeDecl                       shift and go to state 15

state 28

    (169) FuncDecl -> FUNC FunctionName . Signature FunctionBody
    (170) FuncDecl -> FUNC FunctionName . Signature
    (173) Signature -> . Parameters Result
    (174) Signature -> . Parameters
    (175) Parameters -> . LPAREN RPAREN
    (176) Parameters -> . LPAREN ParameterList RPAREN
    (177) Parameters -> . LPAREN ParameterList COMMA RPAREN

    LPAREN          shift and go to state 50
